--- a/web/Django/playing/requirements.txt
+++ b/web/Django/playing/requirements.txt
@@ -1,3 +1,9 @@
 asgiref==3.7.2
-Django==5.0
+black==23.11.0
+click==8.1.7
+Django==4.0.10
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.11.2
+platformdirs==4.1.0
 sqlparse==0.4.4
