--- a/.gitignore
+++ b/.gitignore
@@ -323,3 +323,4 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/django,python,java,c++
+node_modules/
