--- a/projects/to_do_app/package.json
+++ b/projects/to_do_app/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node simpleServer.js"
   },
-  "author": "bnZuhair"
+  "author": "bnZuhair",
+  "dependencies": {
+    "express": "^5.1.0"
+  }
 }
