commit: make the container smaller

--- a/containers/dockerfiles/Dockerfile
+++ b/containers/dockerfiles/Dockerfile
@@ -1,15 +1,16 @@
 #every line of the docker file is a layer
 # this is the image
-From node
+From alpine
 
 #creating a user
-RUN useradd -ms /bin/bash under-control
+# RUN useradd -ms /bin/sh under-control
+RUN adduser -S -s /bin/sh under-control
 USER under-control
 WORKDIR /home/under-control/code
 
 # this is importante
-COPY --chown=under-control ./talking.sh .
+COPY --chown=100:100 ./talking.sh .
 RUN chmod u+x ./talking.sh
 
 #for the final command to be *run* after a container is built
-CMD ["/bin/bash",  "./talking.sh"]
+CMD ["/bin/sh",  "./talking.sh"]
