try: playing with dockerfiles

--- a/containers/dockerfiles/Dockerfile
+++ b/containers/dockerfiles/Dockerfile
@@ -4,12 +4,13 @@ From alpine
 
 #creating a user
 # RUN useradd -ms /bin/sh under-control
-RUN adduser -S -s /bin/sh under-control
+RUN addgroup -S under-control && \
+    adduser -S -s /bin/sh -G under-control under-control
 USER under-control
 WORKDIR /home/under-control/code
 
 # this is importante
-COPY --chown=100:100 ./talking.sh .
+COPY --chown=under-control ./talking.sh .
 RUN chmod u+x ./talking.sh
 
 #for the final command to be *run* after a container is built
